Bump version to flyway-9.22.1
Please see the GH release for the release notes

Closes #3736: Increase CockroachDB support to V22.2

Closes #3738: Change working dir to execution dir to reduce confusion with the working directory

update jre 17

change info message

better handle oracle wrapped statements